# learnvault

./: .all-contributorsrc  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  environments.toml  index.html  lighthouserc.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  contracts-ci.yml  e2e.yml  frontend-ci.yml  lighthouse.yml
contracts/course_milestone/: Cargo.toml
contracts/course_milestone/src/: interface.rs  lib.rs  test.rs
contracts/fungible-allowlist/: Cargo.toml
contracts/milestone_escrow/: Cargo.toml
contracts/milestone_escrow/src/: lib.rs  test.rs
contracts/scholarship_treasury/: Cargo.toml
contracts/scholarship_treasury/src/: lib.rs  test.rs
docs/: LearnToken.md  SECURITY_REVIEW.md  USDC_INTEGRATION.md  brand-guide.md  contracts.md  openapi.yaml  whitepaper.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md
e2e/: critical-flows.spec.ts
e2e/fixtures/: mock-wallet.ts
scripts/: convert-nft-svg-to-png.cjs  mint-test-usdc.sh
server/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
server/scripts/: generate-openapi.cjs  migrate.ts  seed.ts
server/src/: index.ts  openapi.ts
src/: App.js  App.tsx  index.css  main.js  main.tsx
src/components/: ActivityFeed.tsx  AddressDisplay.tsx  CommentCard.tsx  CommentSection.tsx  ConnectAccount.js  CourseCard.module.css  CourseCard.tsx  CourseFilter.tsx  ErrorBoundary.tsx  Footer.js  Footer.tsx  FundAccountButton.js  GetTestUSDCButton.tsx  GuessTheNumber.js  (+21 more)
(+134 files in other folders)
