[package]
name = "scholarship-treasury"
description = "Treasury contract for scholarship funding in USDC"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-registry = "0.0.4"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
governance-token = { path = "../governance_token" }
